2002-02-10  Mikael Hallendal  <micke@codefactory.se>

	* src/*.c: cleaned up includes
		
	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): remove
	  warning.
	
	* src/yelp-window.c (yw_handle_url): show external URL's in
	  external viewer. #67962

2002-02-06  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.c (yelp_util_extract_docpath_from_uri):
	Correctly handle the case when gnome_vfs_uri_new() fails.

2002-01-31  Satan  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-help.desktop.in:
	* src/Makefile.am:
	* yelp.desktop.in:

	Renname stuff to "gnome-help".

	Because I'm a boring kind of guy.
	
2002-01-31  Roy-Magne Mo  <rmo@sunnmore.net>

	* configure.in: Added nn to ALL_LINGUAS.

2002-01-30  Zbigniew Chyla  <cyba@gnome.pl

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2002-01-30  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: bumped version to 0.2.99

	* Release 0.2

	* src/yelp-view-toc.c (yelp_view_toc_write_header): added encoding
	  utf-8 to html header.

	* README: updated

	* configure.in: bumped version.
	
	* src/yelp-util.c: removed debug printouts.

	* src/yelp-html.c: hide debug printouts.

	* src/yelp-view-content.c: same.

	* src/yelp-window.c: same.
	
	* src/yelp-window.c (yw_populate): translate strings from item
	  factory.

	* src/yelp-view-toc.c 
	(yelp_view_toc_start): marked strings for translation.
	(yelp_view_toc_start): same.
	(yelp_view_toc_man_2): same.
	(yelp_view_toc_man_1): same.
	(yelp_view_toc_info): same.
	(yelp_view_toc_scrollkeeper): same.

	* src/yelp-window.c:
	(yw_url_selected_cb): 
	- if both base_url and url is set call resolve_relative_url to get
	  the absolute url. 
	- if only one of them is set, use that one.

	* src/yelp-view-content.c: 
	- moved the scrolled window for the tree into the priv-class.
	(yvc_tree_selection_changed_cb): emit url-selected signal.
	(yelp_view_content_show_path): removed, unused.
	(yelp_view_content_show_uri): 