@@ -1,5 +1,12 @@
 <docs>
-   <document seriesid="01ddeea4-0a42-11d6-9cf9-ee43c422358d"/>
-   <document seriesid="01ddeea4-0a42-11d6-9cf9-ee43c422358e"/>
-   <document seriesid="2d0b7a0c-11d0-11d6-8146-ca25164c0f62"/>
+   <section>
+      <title>Important Docs One</title>
+      <document seriesid="01ddeea4-0a42-11d6-9cf9-ee43c422358d"/>
+      <document seriesid="2d0b7a0c-11d0-11d6-8146-ca25164c0f62"/>
+   </section>
+   <section>
+      <title>Important Docs two</title>
+      <document seriesid="01ddeea4-0a42-11d6-9cf9-ee43c422358e"/>
+      <document seriesid="2d0b7a0c-11d0-11d6-8146-ca25164c0f62"/>
+   </section>
 </docs>
