@@ -1,3 +1,11 @@
+2002-02-12  Alex Larsson  <alexl@redhat.com>
+
+	* important_docs.xml:
+	* src/yelp-view-toc.c:
+	Add sections to the important docs file
+	Consistently call it "Manual pages" instead of "Man pages".
+	Add link back to toc:man from the secondary level man page indexes.
+
 2002-02-10  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/*.c: cleaned up includes
